--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 layout: default
 ---
 
-<section>
+<main>
   <h1>Hello World</h1>
-</section>
+</main>
+
+{% if site.posts %}
+  <ul>
+    {% for post in site.posts %}
+      <li>
+        <a href="{{ post.url }}" title="{{post.title}}">
+          {{ post.title }}
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
+{% endif %}
