--- a/index.html
+++ b/index.html
@@ -1,19 +1,133 @@
 ---
 layout: default
 ---
+<header>
+  <a href="#" title="Home link"> Home Links </a>
+</header>
+<section>
+  <h1>Links</h1>
+  <a href="#" class="link"     title="Sample text link">Sample text link</a>
+  <a href="#" class="link btn" title="Sample button link">Sample button link</a>
+</section>
 
-<main>
-  <h1>Hello World</h1>
-</main>
+<section>
+  <article>
+    <h1>Title</h1>
+    <p class="intro">
+      Lorem ipsum dolor sit amet, <b>consectetur adipisicing elit</b>, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud <em>exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat</em>. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p> 
+    <blockquote>
+      <p>
+        This is a GREAT pull quote.
+      </p>
+      <a href="#">- Author</a>
+    </blockquote>
+    <p>
+      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+      consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
+      ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
+      veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+      ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
+      qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
+      qui dolorem eum fugiat quo voluptas nulla pariatur?"
+    </p>
+    <p>
+      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+      praesentium voluptatum deleniti atque corrupti quos dolores et quas
+      molestias excepturi sint occaecati cupiditate non provident, similique sunt
+      in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+      fuga. Et harum quidem rerum facilis est et expedita distinctio.
+    </p>
+  </article>
+</section>
 
-{% if site.posts %}
-  <ul>
-    {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url }}" title="{{post.title}}">
-          {{ post.title }}
-        </a>
-      </li>
-    {% endfor %}
+<section>
+  <h1 class="h1">Lists</h1>
+  <ul class="list-horizontal">
+    <li>List Item 1</li>
+    <li>List Item 2</li>
+    <li>List Item 3</li>
+    <li>List Item 4</li>
+    <li>List Item 5</li>
+    <li>List Item 6</li>
   </ul>
-{% endif %}
+  <ul class="list-vertical">
+    <li>List Item 1</li>
+    <li>List Item 2</li>
+    <li>List Item 3</li>
+    <li>List Item 4</li>
+    <li>List Item 5</li>
+    <li>List Item 6</li>
+  </ul>
+  <dl class="list-stats">
+    <dt class="list-stats-label">
+      Kick
+    </dt>
+    <dd class="list-stats-stat">
+      808
+    </dd>
+    <dt class="list-stats-label">
+      Snare
+    </dt>
+    <dd class="list-stats-stat">
+      909
+    </dd>
+  </dl>
+</section>
+
+<section>
+  <h1>Headings</h1>
+  <h1 class="h1">First Header h1</h1>
+  <p>
+    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+    praesentium voluptatum deleniti atque corrupti quos.
+  </p>
+  <h2 class="h2">Second header h2</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p> 
+  <h3 class="h3">Third header h3</h3>
+  <p>
+    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+    praesentium voluptatum deleniti atque corrupti quos dolores et quas
+    molestias excepturi sint occaecati cupiditate non provident, similique sunt
+    in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+    fuga. Et harum quidem rerum facilis est et expedita distinctio.
+  </p> 
+  <h4 class="h4">Fourth header h4</h4>
+  <p>
+    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+    consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
+    ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
+    veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+    ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
+    qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
+    qui dolorem eum fugiat quo voluptas nulla pariatur?"
+  </p>
+  <h5 class="h5">Fifth header h5</h5>
+  <p>
+    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+    veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+    ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+  </p>
+  <h6 class="h6">Sixth header h6</h6>
+  <p>
+    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+    praesentium voluptatum deleniti atque corrupti quos.
+  </p>
+</section>
+<footer>
+  <p>Copyright 2013 Some company name</p>
+</footer>
