Adding form elements.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,67 @@ layout: default
     praesentium voluptatum deleniti atque corrupti quos.
   </p>
 </section>
+<section>
+  <form>
+    <fieldset>
+      <legend>Fieldset Title</legend>
+
+      <div>
+        <label>Text Input Label</label>
+        <input type="text"/>
+        <p>Helper text if necessary.</p>
+      </div>
+
+      <div>
+        <label>Password</label>
+        <input type="password" />
+        <p>Error messages when appropriate.</p>
+      </div>
+
+      <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" class="form-text" />
+      </div>
+    
+      <div>
+        <label for="gender">Dropdown</label>
+        <select>
+          <option>Option 1</option>
+          <option>Option 2</option>
+          <option>Option 3</option>
+        </select>
+      </div>
+
+      <div>
+        <label>Radio Buttons</label>
+        <ul>
+          <li><label><input type="radio" /> Label 1</label></li>
+          <li><label><input type="radio" /> Label 2</label></li>
+          <li><label><input type="radio" /> Label 3</label></li>
+        </ul>
+      </div>
+
+      <div>
+        <label for="url">URL Input</label>
+        <input type="url" placeholder="http://mrmrs.cc" />
+      </div>
+
+      <div>
+        <label>Text area</label>
+        <textarea></textarea>
+      </div>
+
+      <div>
+        <label><input type="checkbox" /> This is a checkbox.</label>
+      </div>
+
+      <div>
+        <input type="submit" value="Submit" />
+      </div>
+          
+      </fieldset>
+  </form>
+</section>
 <footer>
-  <p>Copyright 2013 Some company name</p>
-</footer>
+    <p>Copyright 2013 Some company name</p>
+  </footer>
