--- a/index.html
+++ b/index.html
@@ -189,6 +189,64 @@ layout: default
       </fieldset>
   </form>
 </section>
+
+<section>
+  <code>
+    <pre>
+      sudo ipfw pipe 1 config bw 256KByte/s
+      sudo ipfw add 1 pipe 1 src-port 3000
+    </pre>
+  </code>
+</section>
+<section>
+  <h1> Typographacial things</h1>
+  <small>This is for things like copyright info</small>
+  <s>Content that isn't accurate or relevant anymore.</s>
+  <span>Generic span wrapper</span>
+  <abbr>HTML How to meet ladies</abbr>
+  <p>This is inline text with <sub>subscript</sub> and <sup>superscript</sup> elements.</p>
+  <time>6 August, 2010</time>
+</section>
+<section>
+  <!--
+    From the HTML spec (http://www.w3.org/TR/html401/struct/tables.html)
+
+    TFOOT must appear before TBODY within a TABLE definition so that user agents can 
+    render the foot before receiving all of the (potentially numerous) rows of data. 
+    The following summarizes which tags are required and which may be omitted:
+
+    The TBODY start tag is always required except when the table contains only one 
+    table body and no table head or foot sections. The TBODY end tag may always be 
+    safely omitted.
+
+    The start tags for THEAD and TFOOT are required when the table head and foot sections 
+    are present respectively, but the corresponding end tags may always be safely 
+    omitted.
+
+    Conforming user agent parsers must obey these rules for reasons of backward 
+    compatibility.
+  -->
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Date</th>
+        <th>Address</th>
+      </tr>
+    </thead>
+    <tfoot>
+    </tfoot>
+    <tbody>
+      <tr>
+        <td>#999-32ac</dt>
+        <td>First Name</dt>
+        <td>13 May, 2013</dt>
+        <td>999 Spruce Lane, Somewhere, CA 94101</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 <footer>
-    <p>Copyright 2013 Some company name</p>
-  </footer>
+  <small>Copyright 2013 Some company name</small>
+</footer>
