--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@ layout: default
         <td>13 May, 2013</dt>
         <td>999 Spruce Lane, Somewhere, CA 94101</td>
       </tr>
+      <tr>
+        <td>#888-32dd</dt>
+        <td>Sample Name</dt>
+        <td>17 May, 1984</dt>
+        <td>999 Spruce Lane, Somewhere, CA 94101</td>
+      </tr>
     </tbody>
   </table>
 </section>
