--- a/index.html
+++ b/index.html
@@ -78,10 +78,62 @@ layout: default
       909
     </dd>
   </dl>
+  <dl class="list-pairs">
+    <dt class="list-pairs-key">
+      Maine
+    </dt>
+    <dd class="list-pairs-value">
+      Augusta
+    </dd>
+    <dt class="list-pairs-key">
+     California
+    </dt>
+    <dd class="list-pairs-value">
+     Sacremento
+    </dd>
+    <dt class="list-pairs-key">
+      Oregon
+    </dt>
+    <dd class="list-pairs-value">
+      Salem
+    </dd>
+    <dt class="list-pairs-key">
+      New York
+    </dt>
+    <dd class="list-pairs-value">
+      Albany
+    </dd>
+  </dl>
+  <dl class="list-defintions">
+    <dt class="list-definitions-term">
+      Ascender
+    </dt>
+    <dd class="list-definitions-description">
+      The part of certain lowercase letters that extends above the x-height of a font.
+    </dd>
+    <dt class="list-definitions-term">
+      Font
+    </dt>
+    <dd class="list-definitions-description">
+      Traditionally, a complete set of characters for one typeface at one particular type size. Often used more loosely as a synonym for "typeface".
+    </dd>
+    <dt class="list-definitions-term">
+      Golden Section
+    </dt>
+    <dd class="list-definitions-description">
+      The ideal proportion according to the ancient Greeks. It is visualized as the 
+      division of a line into two unequal segments in such a way that the ratio of the 
+      smaller segment to the larger segment is equal to the ratio of the larger to the 
+      whole. It is usually defined as 21:34, that is, 21/34 and 34/(21+34) both equal 
+      approximately 0.618. A rectangle whose sides are of this proportion is called a 
+      "golden rectangle". Golden rectangles can be found in the proportions of the 
+      Parthenon and many medieval manuscripts.
+    </dd>
+  </dl>
 </section>
 
 <section>
-  <h1>Headings</h1>
+  <h1>Headings &amp; Copy</h1>
   <h1 class="h1">First Header h1</h1>
   <p>
     At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
