--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 ---
-<header>
-  <a href="#" title="Home link"> Home Links </a>
-</header>
+
 <section>
   <h1>Links</h1>
   <a href="#" class="link"     title="Sample text link">Sample text link</a>
@@ -251,7 +249,9 @@ layout: default
   </code>
 </section>
 <section>
-  <h1> Typographacial things</h1>
+  <header>
+    <h1> Typographical Stuff</h1>
+  </header>
   <small>This is for things like copyright info</small>
   <s>Content that isn't accurate or relevant anymore.</s>
   <span>Generic span wrapper</span>
@@ -306,5 +306,5 @@ layout: default
   </table>
 </section>
 <footer>
-  <small>Copyright 2013 Some company name</small>
+  <small>© 2013 Some company name</small>
 </footer>
