--- a/index.html
+++ b/index.html
@@ -205,9 +205,20 @@
           </div>
 
           <div>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" class="form-text" />
+          </div>
+
+          <div>
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" class="form-text" />
+          </div>
+
+          <div>
             <label for="email">Email</label>
             <input type="email" id="email" class="form-text" />
           </div>
+
 
           <div>
             <label for="gender">Dropdown</label>
