--- a/index.html
+++ b/index.html
@@ -267,7 +267,12 @@
         </fieldset>
       </form>
     </section>
-
+    <section>
+      <h1>Buttons</h1>
+      <button>A button</button>
+      <button class="btn">A button</button>
+      <button class="btn--large">A large button</button>
+    </section>
     <section>
       <article>
         <h1>Title</h1>
