--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+    <!-- Set the title of your site here -->
     <title> HTML5 Patterns </title>
+
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML5 patterns I use.">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Link to your stylesheet here -->
     <link rel="stylesheet" href="css/i.css">
 
     <!-- Favicons and Touch Device Icons -->
@@ -37,7 +39,9 @@
         <ul>
           <li> <a href="#" title="Home">Home</a> </li>
           <li> <a href="#" title="About">About</a> </li>
+          <li> <a href="#" title="Sign Up">Sign Up</a> </li>
           <li> <a href="#" title="Contact">Contact</a> </li>
+          <li> <a href="#" title="Careers">Careers</a> </li>
         </ul>
       </nav>
     </header>
@@ -90,13 +94,13 @@
         praesentium voluptatum deleniti atque corrupti quos.
       </p>
     </section>
-
+    <hr />
     <section>
       <h1>Links</h1>
       <a href="#" class="link"     title="Sample text link">Sample text link</a>
       <a href="#" class="link btn" title="Sample button link">Sample button link</a>
     </section>
-
+    <hr />
     <section>
       <h1 class="h1">Lists</h1>
       <ul class="list-horizontal">
@@ -192,6 +196,7 @@
     </section>
 
     <section>
+      <h1>Forms</h1>
       <form>
         <fieldset>
           <!--
@@ -273,7 +278,9 @@
       <button class="btn">A button</button>
       <button class="btn--large">A large button</button>
     </section>
+    <hr />
     <section>
+      <h1>An Example Article</h1>
       <article>
         <h1>Title</h1>
         <p class="intro">
@@ -308,8 +315,10 @@
         </p>
       </article>
     </section>
+    <hr />
 
     <section>
+      <h1>Code examples</h1>
       <code>
         <pre>
       sudo ipfw pipe 1 config bw 256KByte/s
@@ -317,6 +326,41 @@
     </pre>
     </code>
   </section>
+    <hr />
+    <section>
+      <h1>Footer</h1>
+      <footer>
+        <p>Copyright 2013. Made with love by <a href="http://mrmrs.cc" title="MRMRS - Designer">mrmrs</a>.</p>
+        <ul>
+           <li>
+             <a href="#">Home</a>
+           </li>
+           <li>
+             <a href="#">Contact</a>
+           </li>
+           <li>
+             <a href="#">Jobs</a>
+           </li>
+        </ul>
+        <ul class="social-links">
+           <li>
+             <a href="http://twitter.com" title=" on Twitter">Twitter</a>
+           </li>
+           <li>
+             <a href="http://pinterest.com" title=" on Pinterest">Pinterest</a>
+           </li>
+           <li>
+             <a href="http://instagram.com" title=" on Instagram">Instagram</a>
+           </li>
+           <li>
+             <a href="http://dribbbble.com" title=" on Dribbble">Dribbble</a>
+           </li>
+           <li>
+             <a href="http://github.com" title=" on Github">Github</a>
+           </li>
+        </ul>
+      </footer>
+    </section>
 
   <section>
     <h1>New hawtness</h1>
@@ -379,6 +423,7 @@
       </samp>
     </section>
     <section>
+      <h1>Tables</h1>
         <!--
         From the HTML spec (http://www.w3.org/TR/html401/struct/tables.html)
 
