Adds styles. And a list of elements in HTML.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,64 @@
   <body>
     <h1 class="f0 tc fw9">HTML</h1>
     <h2 class="tc f4 fw1">Every element in the HTML5 spec. Just waiting to be styled.</h2>
+
+    <section class="ptl">
+      <h1 class="tc ttu">The Elements</h1>
+      <ol class="grid list mn dib">
+        <li class="bg-snow dib pm tc mbs">a</li>
+        <li class="bg-snow dib pm tc mbs">abbr</li>
+        <li class="bg-snow dib pm tc mbs">address</li>
+        <li class="bg-snow dib pm tc mbs">article</li>
+        <li class="bg-snow dib pm tc mbs">blockquote</li>
+        <li class="bg-snow dib pm tc mbs">caption</li>
+        <li class="bg-snow dib pm tc mbs">code</li>
+        <li class="bg-snow dib pm tc mbs">code</li>
+        <li class="bg-snow dib pm tc mbs">div</li>
+        <li class="bg-snow dib pm tc mbs">dl</li>
+        <li class="bg-snow dib pm tc mbs">fieldset</li>
+        <li class="bg-snow dib pm tc mbs">fieldset</li>
+        <li class="bg-snow dib pm tc mbs">figcaption</li>
+        <li class="bg-snow dib pm tc mbs">fiture</li>
+        <li class="bg-snow dib pm tc mbs">footer</li>
+        <li class="bg-snow dib pm tc mbs">form</li>
+        <li class="bg-snow dib pm tc mbs">h1-h6</li>
+        <li class="bg-snow dib pm tc mbs">header</li>
+        <li class="bg-snow dib pm tc mbs">hr</li>
+        <li class="bg-snow dib pm tc mbs">img</li>
+        <li class="bg-snow dib pm tc mbs">input</li>
+        <li class="bg-snow dib pm tc mbs">label</li>
+        <li class="bg-snow dib pm tc mbs">legend</li>
+        <li class="bg-snow dib pm tc mbs">li</li>
+        <li class="bg-snow dib pm tc mbs">nav</li>
+        <li class="bg-snow dib pm tc mbs">ol</li>
+        <li class="bg-snow dib pm tc mbs">option</li>
+        <li class="bg-snow dib pm tc mbs">p</li>
+        <li class="bg-snow dib pm tc mbs">pre</li>
+        <li class="bg-snow dib pm tc mbs">progress</li>
+        <li class="bg-snow dib pm tc mbs">s</li>
+        <li class="bg-snow dib pm tc mbs">samp</li>
+        <li class="bg-snow dib pm tc mbs">sbd</li>
+        <li class="bg-snow dib pm tc mbs">section</li>
+        <li class="bg-snow dib pm tc mbs">select</li>
+        <li class="bg-snow dib pm tc mbs">small</li>
+        <li class="bg-snow dib pm tc mbs">span</li>
+        <li class="bg-snow dib pm tc mbs">sub</li>
+        <li class="bg-snow dib pm tc mbs">submit</li>
+        <li class="bg-snow dib pm tc mbs">sup</li>
+        <li class="bg-snow dib pm tc mbs">table</li>
+        <li class="bg-snow dib pm tc mbs">tbody</li>
+        <li class="bg-snow dib pm tc mbs">td</li>
+        <li class="bg-snow dib pm tc mbs">textarea</li>
+        <li class="bg-snow dib pm tc mbs">tfoot</li>
+        <li class="bg-snow dib pm tc mbs">th</li>
+        <li class="bg-snow dib pm tc mbs">thead</li>
+        <li class="bg-snow dib pm tc mbs">time</li>
+        <li class="bg-snow dib pm tc mbs">tr</li>
+        <li class="bg-snow dib pm tc mbs">ul</li>
+        <li class="bg-snow dib pm tc mbs">var</li>
+      </ol>
+
+    </section>
   </body>
 </html>
 
