--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
-    <title> HTML5 Patterns </title>
+    <title> HTML Patterns </title>
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML5 patterns I use.">
@@ -48,12 +48,12 @@
 
     <section>
       <h1>Headings &amp; Copy</h1>
-      <h1 class="h1">First Header h1</h1>
+      <h1>First Header h1</h1>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos.
       </p>
-      <h2 class="h2">Second header h2</h2>
+      <h2>Second header h2</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -62,7 +62,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      <h3 class="h3">Third header h3</h3>
+      <h3>Third header h3</h3>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos dolores et quas
@@ -70,7 +70,7 @@
         in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
         fuga. Et harum quidem rerum facilis est et expedita distinctio.
       </p>
-      <h4 class="h4">Fourth header h4</h4>
+      <h4>Fourth header h4</h4>
       <p>
         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
         consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
@@ -80,7 +80,7 @@
         qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
         qui dolorem eum fugiat quo voluptas nulla pariatur?"
       </p>
-      <h5 class="h5">Fifth header h5</h5>
+      <h5>Fifth header h5</h5>
       <p>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
         doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
@@ -88,7 +88,7 @@
         ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
         consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
       </p>
-      <h6 class="h6">Sixth header h6</h6>
+      <h6>Sixth header h6</h6>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos.
@@ -97,13 +97,13 @@
     <hr />
     <section>
       <h1>Links</h1>
-      <a href="#" class="link"     title="Sample text link">Sample text link</a>
-      <a href="#" class="link btn" title="Sample button link">Sample button link</a>
+      <a href="#">Sample text link</a>
+      <a href="#">Sample button link</a>
     </section>
     <hr />
     <section>
-      <h1 class="h1">Lists</h1>
-      <ul class="list-horizontal">
+      <h1>Lists</h1>
+      <ul>
         <li>List Item 1</li>
         <li>List Item 2</li>
         <li>List Item 3</li>
@@ -111,7 +111,7 @@
         <li>List Item 5</li>
         <li>List Item 6</li>
       </ul>
-      <ul class="list-vertical">
+      <ul>
         <li>List Item 1</li>
         <li>List Item 2</li>
         <li>List Item 3</li>
@@ -119,7 +119,7 @@
         <li>List Item 5</li>
         <li>List Item 6</li>
       </ul>
-      <ol class="list-vertical">
+      <ol>
         <li>First</li>
         <li>Second</li>
         <li>Third</li>
@@ -127,63 +127,63 @@
         <li>Fifth</li>
         <li>Sixth</li>
       </ol>
-      <dl class="list-stats">
-        <dt class="list-stats-label">
+      <dl>
+        <dt>
         Kick
         </dt>
-        <dd class="list-stats-stat">
+        <dd>
         808
         </dd>
-        <dt class="list-stats-label">
+        <dt>
         Snare
         </dt>
-        <dd class="list-stats-stat">
+        <dd>
         909
         </dd>
       </dl>
-      <dl class="list-pairs">
-        <dt class="list-pairs-key">
+      <dl>
+        <dt>
         Maine
         </dt>
-        <dd class="list-pairs-value">
+        <dd>
         Augusta
         </dd>
-        <dt class="list-pairs-key">
+        <dt>
         California
         </dt>
-        <dd class="list-pairs-value">
+        <dd>
         Sacremento
         </dd>
-        <dt class="list-pairs-key">
+        <dt>
         Oregon
         </dt>
-        <dd class="list-pairs-value">
+        <dd>
         Salem
         </dd>
-        <dt class="list-pairs-key">
+        <dt>
         New York
         </dt>
-        <dd class="list-pairs-value">
+        <dd>
         Albany
         </dd>
       </dl>
-      <dl class="list-defintions">
-        <dt class="list-definitions-term">
+      <dl>
+        <dt>
         Ascender
         </dt>
-        <dd class="list-definitions-description">
+        <dd>
         The part of certain lowercase letters that extends above the x-height of a font.
         </dd>
-        <dt class="list-definitions-term">
+        <dt>
         Font
         </dt>
-        <dd class="list-definitions-description">
+        <dd>
         Traditionally, a complete set of characters for one typeface at one particular type size. Often used more loosely as a synonym for "typeface".
         </dd>
-        <dt class="list-definitions-term">
+        <dt>
         Golden Section
         </dt>
-        <dd class="list-definitions-description">
+        <dd>
         The ideal proportion according to the ancient Greeks. It is visualized as the
         division of a line into two unequal segments in such a way that the ratio of the
         smaller segment to the larger segment is equal to the ratio of the larger to the
@@ -207,7 +207,7 @@
 
           <div>
             <label>Text Input Label</label>
-            <input type="text"/>
+            <input type="text" />
             <p>Helper text if necessary.</p>
           </div>
 
@@ -219,17 +219,17 @@
 
           <div>
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" class="form-text" />
+            <input type="text" id="first-name" />
           </div>
 
           <div>
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" class="form-text" />
+            <input type="text" id="last-name" />
           </div>
 
           <div>
             <label for="email">Email</label>
-            <input type="email" id="email" class="form-text" />
+            <input type="email" id="email" />
           </div>
 
 
@@ -275,15 +275,15 @@
     <section>
       <h1>Buttons</h1>
       <button>A button</button>
-      <button class="btn">A button</button>
-      <button class="btn--large">A large button</button>
+      <button>A button</button>
+      <button>A large button</button>
     </section>
     <hr />
     <section>
       <h1>An Example Article</h1>
       <article>
         <h1>Title</h1>
-        <p class="intro">
+        <p>
           Lorem ipsum dolor sit amet, <b>consectetur adipisicing elit</b>, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud <em>exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -342,7 +342,7 @@
              <a href="#">Jobs</a>
            </li>
         </ul>
-        <ul class="social-links">
+        <ul>
            <li>
              <a href="http://twitter.com" title=" on Twitter">Twitter</a>
            </li>
