Remove diff info.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   </head>
 
   <body>
+
+    <header>
+      <h1 class="mega-ns">HTML</h1>
+      <h2 class="Every html element in one place. Just waiting to be styled.">HTML</h1>
+    </header>
+
+
+
     <!--
 
     HTML - Common patterns
@@ -103,22 +111,16 @@
     <hr />
     <section>
       <h1 class="other-class">Lists</h1>
+      <h2>Unordered list</h2>
       <ul>
-        <li>List Item 1</li>
-        <li>List Item 2</li>
-        <li>List Item 3</li>
-        <li>List Item 4</li>
-        <li>List Item 5</li>
-        <li>List Item 6</li>
+        <li>Orange</li>
+        <li>Apple</li>
+        <li>Rhubarb</li>
+        <li>Rasberry</li>
+        <li>Blueberry</li>
+        <li>Cherry</li>
       </ul>
-      <ul>
-        <li>List Item 1</li>
-        <li>List Item 2</li>
-        <li>List Item 3</li>
-        <li>List Item 4</li>
-        <li>List Item 5</li>
-        <li>List Item 6</li>
-      </ul>
+      <h2>Ordered list</h2>
       <ol>
         <li>First</li>
         <li>Second</li>
@@ -127,6 +129,7 @@
         <li>Fifth</li>
         <li>Sixth</li>
       </ol>
+      <h2>Definition list</h2>
       <dl>
         <dt>
         Kick
@@ -142,47 +145,24 @@
         </dd>
       </dl>
       <dl>
-        <dt>
-        Maine
-        </dt>
-        <dd>
-        Augusta
-        </dd>
-        <dt>
-        California
-        </dt>
-        <dd>
-        Sacremento
-        </dd>
-        <dt>
-        Oregon
-        </dt>
-        <dd>
-        Salem
-        </dd>
-        <dt>
-        New York
-        </dt>
-        <dd>
-        Albany
-        </dd>
+        <dt> Maine </dt>
+        <dd> Augusta </dd>
+        <dt> California </dt>
+        <dd> Sacremento </dd>
+        <dt> Oregon </dt>
+        <dd> Salem </dd>
+        <dt> New York </dt>
+        <dd> Albany </dd>
       </dl>
       <dl>
-        <dt>
-        Ascender
-        </dt>
-        <dd>
-        The part of certain lowercase letters that extends above the x-height of a font.
+        <dt> Ascender </dt>
+        <dd> The part of certain lowercase letters that extends above the x-height of a font.  </dd>
+        <dt> Font </dt>
+        <dd> Traditionally, a complete set of characters for one typeface at
+        one particular type size. Often used more loosely as a synonym for
+        "typeface".
         </dd>
-        <dt>
-        Font
-        </dt>
-        <dd>
-        Traditionally, a complete set of characters for one typeface at one particular type size. Often used more loosely as a synonym for "typeface".
-        </dd>
-        <dt>
-        Golden Section
-        </dt>
+        <dt> Golden Section </dt>
         <dd>
         The ideal proportion according to the ancient Greeks. It is visualized as the
         division of a line into two unequal segments in such a way that the ratio of the
@@ -443,7 +423,7 @@
         compatibility.
         -->
       <table>
-        <caption>Tabular Data Example Tabular Data Examples</caption>
+        <caption>This is a caption for a table</caption>
         <thead>
           <tr>
             <th>ID</th>
@@ -472,11 +452,11 @@
       </table>
     </section>
     <section>
+      <h1>Footer</h1>
       <footer>
         <small>© 2014 Some company name</small>
         <address>email@email.com</address>
       </footer>
->>>>>>> master
     </section>
   </body>
 </html>
