Update img url.

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
   <section>
     <figure>
-      <img src="/img/figure-example.jpg" alt="Figure Example">
+      <img src="http://placekitten.com/g/960/320" alt="Figure Example">
       <figcaption>
         Photo of the sky at night. Original by <a href="http://flickr.com/photos/heyitsadam/">@mrmrs</a>
       </figcaption>
