Fix closing h2 and invalid tfoot
Closed h2 tag properly. Also, tfoot may only contain 0 or more tr elements, but not free text. Validation errors picked up when viewing source in Firefox. Hope this is ok! :)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header>
       <h1 class="mega-ns">HTML</h1>
-      <h2 class="Every html element in one place. Just waiting to be styled.">HTML</h1>
+      <h2 class="Every html element in one place. Just waiting to be styled.">HTML</h2>
     </header>
 
 
@@ -433,7 +433,9 @@
           </tr>
         </thead>
         <tfoot>
-          Table footer info
+          <tr>
+            <td>Table footer info</td>
+          </tr>
         </tfoot>
         <tbody>
           <tr>
