--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
-    <title> HTML Patterns </title>
+    <title> HTML Patterns fork from github   to</title><!--title change msg-->
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML5 patterns I use.">
@@ -45,10 +45,10 @@
       <a href="" title="Site title"><h1 class="other-class">Site title</h1></a>
       <nav>
         <ul>
-          <li> <a href="#" title="Home">Home</a> </li>
-          <li> <a href="#" title="About">About</a> </li>
+          <li> <a href="#" title="Home1">Home</a></li>
+          <li> <a href="#" title="About us">About us</a> us </li><!-- change here-->
           <li> <a href="#" title="Sign Up">Sign Up</a> </li>
-          <li> <a href="#" title="Contact">Contact</a> </li>
+          <li> <a href="#" title="Contact">Contact us</a> </li><!--change here-->
           <li> <a href="#" title="Careers">Careers</a> </li>
         </ul>
       </nav>
