--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
       <h1 class="other-class">Lists</h1>
       <h2>Unordered list</h2>
       <ul>
+      <li>Apple</li>
+      <li>Grapes</li>
         <li>Orange</li>
         <li>Apple</li>
         <li>Rhubarb</li>
