title changes and copyright changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
-    <title> HTML Patterns fork from github   to</title><!--title change msg-->
+    <title> HTML Pattern for the learnenner </title><!--title change msg-->
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML5 patterns I use.">
@@ -458,7 +458,7 @@
     <section>
       <h1>Footer</h1>
       <footer>
-        <small>© 2014 Some company name</small>
+        <small>© 2015 Some company name</small><!-- copyright changes-->
         <address>email@email.com</address>
       </footer>
     </section>
