--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             <label>Text Input Label</label>
             <input type="text" />
             <p class="test-class">Helper text if necessary.</p>
+		
           </div>
 
           <div>
@@ -200,17 +201,20 @@
           <div>
             <label for="first-name">First Name</label>
             <input type="text" id="first-name" />
+		<p></p>
           </div>
 
           <div>
             <label for="last-name">Last Name</label>
             <input type="text" id="last-name" />
+	<p></p>
           </div>
 
           <div>
-            <label for="email">Email</label>
+            <label for="email">Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <input type="email" id="email" />
-          </div>
+		<p></p>          
+	</div>
 
 
           <div>
@@ -219,7 +223,7 @@
               <option>Option 1</option>
               <option>Option 2</option>
               <option>Option 3</option>
-            </select>
+            </select><p></p>
           </div>
 
           <div>
@@ -234,15 +238,18 @@
           <div>
             <label for="url">URL Input</label>
             <input type="url" placeholder="http://mrmrs.cc" />
+            <p></p>
           </div>
 
           <div>
             <label>Text area</label>
             <textarea></textarea>
+			<p></p>
           </div>
 
           <div>
             <label><input type="checkbox" /> This is a checkbox.</label>
+            <p></p>
           </div>
 
           <div>
@@ -434,7 +441,7 @@
         </thead>
         <tfoot>
           <tr>
-            <td>Table footer info</td>
+            <th>Table footer info</th>
           </tr>
         </tfoot>
         <tbody>
