--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
-    <title> HTML Patterns </title>
+    <title> WELCOME TO HTML Patterns </title>
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML5 patterns I use.">
@@ -25,7 +25,7 @@
   <body>
 
     <header>
-      <h1 class="mega-ns">HTML</h1>
+      <h1 class="mega-ns"> Hello HTML</h1>
       <h2 class="Every html element in one place. Just waiting to be styled.">HTML</h2>
     </header>
 
@@ -462,4 +462,3 @@
     </section>
   </body>
 </html>
-
