--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <li> <a href="#" title="Sign Up">Sign Up</a> </li>
           <li> <a href="#" title="Contact">Contact</a> </li>
           <li> <a href="#" title="Careers">Careers</a> </li>
+          <li> <a href="#" title="Register">Register</a> </li>
+          <li> <a href="#" title="Login">Login</a> </li>
         </ul>
       </nav>
     </header>
