Get rid of classes. Fix typos.
Where a content string was in the class attribute for no reason and thhe
word html was written twice.

--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <title> HTML Patterns </title>
 
     <meta name="author" content="mrmrs">
-    <meta name="description" content="Common HTML5 patterns I use.">
+    <meta name="description" content="Common HTML patterns">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Link to your stylesheet here -->
+    <!-- Link to your stylesheet here 
     <link rel="stylesheet" href="css/i.css">
 
-    <!-- Favicons and Touch Device Icons -->
+    Favicons and Touch Device Icons 
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="touch-icon-iphone-precomposed.png">
     <link rel="apple-touch-icon" sizes="72x72"   href="touch-icon-ipad-precomposed.png">
     <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-retina-precomposed.png">
     <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina-precomposed.png">
+    -->
   </head>
 
   <body>
 
     <header>
-      <h1 class="mega-ns">HTML</h1>
-      <h2 class="Every html element in one place. Just waiting to be styled.">HTML</h2>
+      <h1>HTML</h1>
+      <h2>Every html element in one place. Just waiting to be styled.</h2>
     </header>
 
 
@@ -42,7 +43,7 @@
     -->
 
     <header>
-      <a href="" title="Site title"><h1 class="other-class">Site title</h1></a>
+      <a href="" title="Site title"><h1>Site title</h1></a>
       <nav>
         <ul>
           <li> <a href="#" title="Home">Home</a> </li>
@@ -55,14 +56,14 @@
     </header>
 
     <section>
-      <h1 class="other-class">Headings &amp; Copy</h1>
-      <h1 class="other-class">First Header h1</h1>
-      <p class="test-class">
+      <h>Headings &amp; Copy</h1>
+      <h1>First Header h1</h1>
+      <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos.
       </p>
       <h2>Second header h2</h2>
-      <p class="test-class">
+      <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -71,7 +72,7 @@
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <h3>Third header h3</h3>
-      <p class="test-class">
+      <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos dolores et quas
         molestias excepturi sint occaecati cupiditate non provident, similique sunt
@@ -79,7 +80,7 @@
         fuga. Et harum quidem rerum facilis est et expedita distinctio.
       </p>
       <h4>Fourth header h4</h4>
-      <p class="test-class">
+      <p>
         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
         consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
         ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
@@ -89,7 +90,7 @@
         qui dolorem eum fugiat quo voluptas nulla pariatur?"
       </p>
       <h5>Fifth header h5</h5>
-      <p class="test-class">
+      <p>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
         doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
         veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
@@ -97,20 +98,20 @@
         consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
       </p>
       <h6>Sixth header h6</h6>
-      <p class="test-class">
+      <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos.
       </p>
     </section>
     <hr />
     <section>
-      <h1 class="other-class">Links</h1>
+      <h1>Links</h1>
       <a href="#">Sample text link</a>
       <a href="#">Sample button link</a>
     </section>
     <hr />
     <section>
-      <h1 class="other-class">Lists</h1>
+      <h1>Lists</h1>
       <h2>Unordered list</h2>
       <ul>
         <li>Orange</li>
@@ -176,7 +177,7 @@
     </section>
 
     <section>
-      <h1 class="other-class">Forms</h1>
+      <h1>Forms</h1>
       <form>
         <fieldset>
           <!--
@@ -188,13 +189,13 @@
           <div>
             <label>Text Input Label</label>
             <input type="text" />
-            <p class="test-class">Helper text if necessary.</p>
+            <p>Helper text if necessary.</p>
           </div>
 
           <div>
             <label>Password</label>
             <input type="password" />
-            <p class="test-class">Error messages when appropriate.</p>
+            <p>Error messages when appropriate.</p>
           </div>
 
           <div>
@@ -253,17 +254,17 @@
       </form>
     </section>
     <section>
-      <h1 class="other-class">Buttons</h1>
+      <h1>Buttons</h1>
       <button>A button</button>
       <button>A button</button>
       <button>A large button</button>
     </section>
     <hr />
     <section>
-      <h1 class="other-class">An Example Article</h1>
+      <h1>An Example Article</h1>
       <article>
-        <h1 class="other-class">Title</h1>
-        <p class="test-class">
+        <h1>Title</h1>
+        <p>
           Lorem ipsum dolor sit amet, <b>consectetur adipisicing elit</b>, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud <em>exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -272,12 +273,12 @@
           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <blockquote>
-          <p class="test-class">
+          <p>
             This is a GREAT pull quote.
           </p>
           <a href="#">- Author</a>
         </blockquote>
-        <p class="test-class">
+        <p>
           Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
           consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
           ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
@@ -286,7 +287,7 @@
           qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
           qui dolorem eum fugiat quo voluptas nulla pariatur?"
         </p>
-        <p class="test-class">
+        <p>
           At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
           praesentium voluptatum deleniti atque corrupti quos dolores et quas
           molestias excepturi sint occaecati cupiditate non provident, similique sunt
@@ -298,7 +299,7 @@
     <hr />
 
     <section>
-      <h1 class="other-class">Code examples</h1>
+      <h1>Code examples</h1>
       <code>
         <pre>
       sudo ipfw pipe 1 config bw 256KByte/s
@@ -308,9 +309,9 @@
   </section>
     <hr />
     <section>
-      <h1 class="other-class">Footer</h1>
+      <h1>Footer</h1>
       <footer>
-        <p class="test-class">Copyright 2013. Made with love by <a href="http://mrmrs.cc" title="MRMRS - Designer">mrmrs</a>.</p>
+        <p>Copyright 2013. Made with love by <a href="http://mrmrs.cc" title="MRMRS - Designer">mrmrs</a>.</p>
         <ul>
            <li>
              <a href="#">Home</a>
@@ -343,21 +344,21 @@
     </section>
 
   <section>
-    <h1 class="other-class">New hawtness</h1>
+    <h1>New hawtness</h1>
     <progress value="80" max="100">80 %</progress>
-    <p class="test-class">We are this close to the goal: <meter min="0" max="1000" value="824">$824</meter>.</p>
+    <p>We are this close to the goal: <meter min="0" max="1000" value="824">$824</meter>.</p>
   </section>
 
   <section>
     <header>
-      <h1 class="other-class">Random Stuff</h1>
+      <h1>Random Stuff</h1>
     </header>
     <small>This is for things like copyright info</small>
     <s>Content that isn't accurate or relevant anymore.</s>
     <span>Generic span wrapper</span>
     <abbr>HTML How to meet ladies</abbr>
-    <p class="test-class">This is inline text with <sub>subscript</sub> and <sup>superscript</sup> elements.</p>
-    <p class="test-class">
+    <p>This is inline text with <sub>subscript</sub> and <sup>superscript</sup> elements.</p>
+    <p>
       <var>f</var>(<var>x</var>) = <var>a</var><sub>0</sub> + <var>a</var><sub>1</sub><var>x</var> +
       <var>a</var><sub>2</sub><var>x</var><sup>2</sup>, where <var>a</var><sup>2</sup> ≠ 0
     </p>
@@ -403,7 +404,7 @@
       </samp>
     </section>
     <section>
-      <h1 class="other-class">Tables</h1>
+      <h1>Tables</h1>
         <!--
         From the HTML spec (http://www.w3.org/TR/html401/struct/tables.html)
 
