Update tag "meta utf-8"
modify the tag: meta utf-8 by: <meta http-equiv="content-type" content="text/html: charset=UTF-8 ">

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html: charset=UTF-8 ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
@@ -457,7 +457,7 @@
     <section>
       <h1>Footer</h1>
       <footer>
-        <small>© 2014 Some company name</small>
+        <small>© 2018 Some company name</small>
         <address>email@email.com</address>
       </footer>
     </section>
