--- a/index.html
+++ b/index.html
@@ -10,6 +10,49 @@
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML patterns">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+html {
+  height:100%;
+  background-image: linear-gradient(to right top, #8e44ad 0%, #3498db 100%);
+}
+
+nav {
+  max-width: 960px;
+  mask-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 25%, #ffffff 75%, rgba(255, 255, 255, 0) 100%);
+  margin: 0 auto;
+  padding: 60px 0;
+}
+
+nav ul {
+  text-align: center;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0) 100%);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  padding: 18px;
+  font-family: "Open Sans";
+  text-transform:uppercase;
+  color: rgba(0, 35, 122, 0.5);
+  font-size: 18px;
+  text-decoration: none;
+  display: block;
+}
+
+nav ul li a:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(0, 35, 122, 0.7);
+}
+
+
+    </style>
 
     <!-- Link to your stylesheet here 
     <link rel="stylesheet" href="css/i.css">
@@ -42,19 +85,22 @@
 
     -->
 
-    <header>
-      <a href="" title="Site title"><h1>Site title</h1></a>
-      <nav>
-        <ul>
-          <li> <a href="#" title="Home">Home</a> </li>
-          <li> <a href="#" title="About">About</a> </li>
-          <li> <a href="#" title="Sign Up">Sign Up</a> </li>
-          <li> <a href="#" title="Contact">Contact</a> </li>
-          <li> <a href="#" title="Careers">Careers</a> </li>
-        </ul>
-      </nav>
-    </header>
-
+  <nav>
+  <ul>
+    <li>
+      <a href="#">Home</a>
+    </li>
+    <li>
+      <a href="#">About</a>
+    </li>
+    <li>
+      <a href="#">Services</a>
+    </li>
+    <li>
+      <a href="#">Contact</a>
+    </li>
+  </ul>
+</nav>
     <section>
       <h>Headings &amp; Copy</h1>
       <h1>First Header h1</h1>
