--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+    <!-- Style  -->
+    <link rel="stylesheet" href="style.css">
+
     <!-- Set the title of your site here -->
     <title> HTML Patterns </title>
 
@@ -42,8 +45,8 @@
 
     -->
 
-    <header>
-      <a href="" title="Site title"><h1>Site title</h1></a>
+    <header class="list">
+      <a href="" title="Site title" class="judul"><h1>Site title</h1></a>
       <nav>
         <ul>
           <li> <a href="#" title="Home">Home</a> </li>
@@ -55,62 +58,75 @@
       </nav>
     </header>
 
-    <section>
+    <section class="judul2">
       <h>Headings &amp; Copy</h1>
-      <h1>First Header h1</h1>
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-        praesentium voluptatum deleniti atque corrupti quos.
-      </p>
-      <h2>Second header h2</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <h3>Third header h3</h3>
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-        praesentium voluptatum deleniti atque corrupti quos dolores et quas
-        molestias excepturi sint occaecati cupiditate non provident, similique sunt
-        in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
-        fuga. Et harum quidem rerum facilis est et expedita distinctio.
-      </p>
-      <h4>Fourth header h4</h4>
-      <p>
-        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
-        ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-        veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
-        ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
-        qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-        qui dolorem eum fugiat quo voluptas nulla pariatur?"
-      </p>
-      <h5>Fifth header h5</h5>
-      <p>
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-        veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-        ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-      </p>
-      <h6>Sixth header h6</h6>
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-        praesentium voluptatum deleniti atque corrupti quos.
-      </p>
+        <div class="satu">
+           <h1>First Header h1</h1>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium voluptatum deleniti atque corrupti quos.
+          </p>
+        </div>
+        <div class="dua">
+          <h2>Second header h2</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="tiga">
+              <h3>Third header h3</h3>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium voluptatum deleniti atque corrupti quos dolores et quas
+            molestias excepturi sint occaecati cupiditate non provident, similique sunt
+            in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+            fuga. Et harum quidem rerum facilis est et expedita distinctio.
+          </p>
+        </div>
+        <div class="empat">
+              <h4>Fourth header h4</h4>
+          <p>
+            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+            consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
+            ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
+            veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
+            ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
+            qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
+            qui dolorem eum fugiat quo voluptas nulla pariatur?"
+          </p>
+        </div>
+        <div class="lima">
+              <h5>Fifth header h5</h5>
+          <p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+            veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+            ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          </p>
+        </div>
+        <div class="enam">
+              <h6>Sixth header h6</h6>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium voluptatum deleniti atque corrupti quos.
+          </p>
+        </div>
+      
     </section>
     <hr />
-    <section>
+    <!-- <section>
       <h1>Links</h1>
       <a href="#">Sample text link</a>
       <a href="#">Sample button link</a>
-    </section>
+    </section> -->
     <hr />
-    <section>
+    <section class="lain">
       <h1>Lists</h1>
       <h2>Unordered list</h2>
       <ul>
@@ -176,7 +192,7 @@
       </dl>
     </section>
 
-    <section>
+    <section class="form">
       <h1>Forms</h1>
       <form>
         <fieldset>
@@ -253,14 +269,14 @@
         </fieldset>
       </form>
     </section>
-    <section>
+    <section class="btn">
       <h1>Buttons</h1>
       <button>A button</button>
       <button>A button</button>
       <button>A large button</button>
     </section>
     <hr />
-    <section>
+    <section class="art">
       <h1>An Example Article</h1>
       <article>
         <h1>Title</h1>
@@ -298,7 +314,7 @@
     </section>
     <hr />
 
-    <section>
+    <section class="cdexp">
       <h1>Code examples</h1>
       <code>
         <pre>
