--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header>
       <h1>HTML</h1>
-      <h2>Every html element in one place. Just waiting to be styled.</h2>
+      <h2>Every <b>html</b> element in one place. Just waiting to be styled.</h2>
     </header>
 
 
@@ -56,15 +56,15 @@
     </header>
 
     <section>
-      <h>Headings &amp; Copy</h1>
+      <h1>Headings &amp; Copy</h1>
       <h1>First Header h1</h1>
       <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+        <b>At</b> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos.
       </p>
       <h2>Second header h2</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <b> Lorem</b> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -73,7 +73,7 @@
       </p>
       <h3>Third header h3</h3>
       <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+        <b>At</b> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos dolores et quas
         molestias excepturi sint occaecati cupiditate non provident, similique sunt
         in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
@@ -81,7 +81,7 @@
       </p>
       <h4>Fourth header h4</h4>
       <p>
-        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+        <b>Neque</b> porro quisquam est, qui dolorem ipsum quia dolor sit amet,
         consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
         ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
         veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
@@ -91,7 +91,7 @@
       </p>
       <h5>Fifth header h5</h5>
       <p>
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+        <b> Sed</b> ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
         doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
         veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
         ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
@@ -99,7 +99,7 @@
       </p>
       <h6>Sixth header h6</h6>
       <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+        <b>At</b> vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
         praesentium voluptatum deleniti atque corrupti quos.
       </p>
     </section>
