--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta name="description" content="Common HTML patterns">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style1.css">
+
     <!-- Link to your stylesheet here 
     <link rel="stylesheet" href="css/i.css">
 
@@ -178,7 +184,7 @@
 
     <section>
       <h1>Forms</h1>
-      <form>
+      <form id="OF">
         <fieldset>
           <!--
           Every fieldset must contain a legend. IE barfs if it's not there.
@@ -187,77 +193,84 @@
           <legend>Legend Example</legend>
 
           <div>
-            <label>Text Input Label</label>
-            <input type="text" />
+            <label for="inp">Text Input Label</label>
+            <input type="text" id="inp" class="dp"/>
             <p>Helper text if necessary.</p>
           </div>
 
           <div>
-            <label>Password</label>
-            <input type="password" />
+            <label for="pass">Password</label>
+            <input type="password" id="pass" class="dp"/>
             <p>Error messages when appropriate.</p>
           </div>
 
           <div>
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" />
+            <input type="text" id="first-name" class="dp"/>
           </div>
 
           <div>
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" />
+            <input type="text" id="last-name" class="dp"/>
           </div>
 
           <div>
             <label for="email">Email</label>
-            <input type="email" id="email" />
+            <input type="email" id="email" class="dp"/>
           </div>
 
 
           <div>
             <label for="gender">Dropdown</label>
-            <select>
-              <option>Option 1</option>
-              <option>Option 2</option>
-              <option>Option 3</option>
+            <select id="gender" class="dp">
+              <option value="Option1">Option 1</option>
+              <option value="Option2">Option 2</option>
+              <option value="Option3">Option 3</option>
             </select>
           </div>
 
           <div>
             <label>Radio Buttons</label>
             <ul>
-              <li><label><input type="radio" /> Label 1</label></li>
-              <li><label><input type="radio" /> Label 2</label></li>
-              <li><label><input type="radio" /> Label 3</label></li>
+              <li><label for="myRadio"><input type="radio" name="gp" id="myRadio" /> Label 1</label></li>
+              <li><label for="myRadio"><input type="radio" name="gp" id="myRadio" /> Label 2</label></li>
+              <li><label for="myRadio"><input type="radio" name="gp" id="myRadio" /> Label 3</label></li>
             </ul>
           </div>
 
           <div>
             <label for="url">URL Input</label>
-            <input type="url" placeholder="http://mrmrs.cc" />
+            <input type="url" placeholder="http://mrmrs.cc" id="url" class="dp"/>
           </div>
 
           <div>
-            <label>Text area</label>
-            <textarea></textarea>
+            <label for="msg">Text area</label>
+            <textarea id="msg" class="dp"></textarea>
           </div>
 
           <div>
-            <label><input type="checkbox" /> This is a checkbox.</label>
+            <label for="cb"><input type="checkbox" id="cb" /> This is a checkbox.</label>
           </div>
 
-          <div>
-            <input type="submit" value="Submit" />
-          </div>
+          
 
         </fieldset>
+
+        <section>
+          <h1>Buttons</h1>
+          <button class="button" type="submit">Submit</button>
+          <button class="button" type="reset">Reset</button>
+          <button class="button">A large button</button>
+        </section>
+
       </form>
     </section>
+    <hr />
     <section>
-      <h1>Buttons</h1>
-      <button>A button</button>
-      <button>A button</button>
-      <button>A large button</button>
+      <article  id="artOpinions">
+        <h2>Visitor Opinions</h2>
+        <div id="opinionsContainer"></div>
+      </article>
     </section>
     <hr />
     <section>
@@ -461,6 +474,8 @@
         <address>email@email.com</address>
       </footer>
     </section>
+
+    <script src="index.js"></script>
   </body>
 </html>
 
