--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
     <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-retina-precomposed.png">
     <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina-precomposed.png">
     -->
+    <style>
+body {
+  background-color: #E6E6FA;
+}
+</style>
+      
+      
   </head>
 
-  <body>
+  <body bgcolor=>
 
     <header>
       <h1>HTML</h1>
