--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     -->
     <style>
 body {
-  background-color: #E6E6FA;
+  background-color: #70e7ec;
 }
 </style>
       
       
   </head>
 
-  <body bgcolor=>
+  <body>
 
     <header>
       <h1>HTML</h1>
